# Contest3

./: .gitignore  CMakeLists.txt
taskA/: main.cpp
taskB/: main.cpp
taskC/: main.cpp
taskD/: main.cpp
taskE/: main.cpp
taskF/: main.cpp
